test/integration/bad/reserved/column_stochastic_matrix.stan
data {
  real column_stochastic_matrix;
}
